--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
         // --- Data Definitions ---
         const firms = [
-            { id: 'Accenture', type: 'GSI' }, { id: 'TCS', type: 'GSI' }, { id: 'Capgemini', type: 'GSI' }, 
+            { id: 'Accenture', type: 'GSI' }, { id: 'Tata Consultancy Services', type: 'GSI' }, { id: 'Capgemini', type: 'GSI' }, 
             { id: 'Infosys', type: 'GSI' }, { id: 'Wipro', type: 'GSI' }, { id: 'Cognizant', type: 'GSI' }, 
             { id: 'HCLTech', type: 'GSI' },
             { id: 'Deloitte', type: 'Advisory' }, { id: 'PwC', type: 'Advisory' }, 
@@ -716,13 +716,13 @@
                 { source: 'Capgemini', target: 'Google Cloud', level: 'Industry', award: 'GenAI POY' },
                 { source: 'Capgemini', target: 'Salesforce', level: 'Strategic' },
                 { source: 'Capgemini', target: 'SAP', level: 'Pinnacle' },
-                { source: 'TCS', target: 'Microsoft', level: 'Strategic' },
-                { source: 'TCS', target: 'AWS', level: 'Strategic' },
-                { source: 'TCS', target: 'Google Cloud', level: 'Strategic' },
-                { source: 'TCS', target: 'Salesforce', level: 'Technology' },
-                { source: 'TCS', target: 'SAP', level: 'Technology' },
-                { source: 'TCS', target: 'Oracle', level: 'Premier' },
-                { source: 'TCS', target: 'ServiceNow', level: 'Technology' },
+                { source: 'Tata Consultancy Services', target: 'Microsoft', level: 'Strategic' },
+                { source: 'Tata Consultancy Services', target: 'AWS', level: 'Strategic' },
+                { source: 'Tata Consultancy Services', target: 'Google Cloud', level: 'Strategic' },
+                { source: 'Tata Consultancy Services', target: 'Salesforce', level: 'Technology' },
+                { source: 'Tata Consultancy Services', target: 'SAP', level: 'Technology' },
+                { source: 'Tata Consultancy Services', target: 'Oracle', level: 'Premier' },
+                { source: 'Tata Consultancy Services', target: 'ServiceNow', level: 'Technology' },
                 { source: 'Infosys', target: 'Microsoft', level: 'Gold' },
                 { source: 'Infosys', target: 'AWS', level: 'Premier' },
                 { source: 'Infosys', target: 'Google Cloud', level: 'Specialization' },
@@ -771,7 +771,7 @@
                 { source: 'Nvidia', target: 'PwC', level: 'Strategic Alliance' },
                 { source: 'Nvidia', target: 'EY', level: 'Collaboration' },
                 { source: 'Nvidia', target: 'KPMG', level: 'Global Alliance' },
-                { source: 'Nvidia', target: 'TCS', level: 'Expanded Partnership' },
+                { source: 'Nvidia', target: 'Tata Consultancy Services', level: 'Expanded Partnership' },
                 { source: 'Nvidia', target: 'Wipro', level: 'Strategic Partnership' },
                 { source: 'Nvidia', target: 'Infosys', level: 'Expanded Partnership' },
                 { source: 'Nvidia', target: 'Slalom', level: 'Visualization Partner' }
